Updates to the resume website

--- a/index.html
+++ b/index.html
@@ -6,17 +6,83 @@
     <title>My Resume</title>
 </head>
 <body>
+    <h1>Shyam Jose R</h1>
+    <img src="./assets/images/Profile_Pic.jpg" alt="Profile Picture" height="200">
     <h2>Summary</h2>
     <h2>Education</h2>
+    <ul>
+        <li>RMD Engineering College</li>
+        <li>Bethlahem Matric Higher Secondary School</li>
+        <li>Good Shepherd Matric Higher Secondary School</li>
+    </ul>
     <h2>Work Experience</h2>
+    <ul>
+        <li>Agile</li>
+        <li>API</li>
+        <li>Business Requirements</li>
+        <li>Automated Test Scripts</li>
+        <li>CSS</li>
+        <li>Database</li>
+        <li>CI/CD</li>
+        <li>Shift Left Approach</li>
+        <li>Selenium </li>
+        <li>Cucumber BDD framework</li>
+        <li>Core Java</li>
+        <li>API Automation</li>
+        <li>Writing SQL for Automated testing</li>
+        <li>IBM MQ Automation</li>
+        <li>Kafka Automation</li>
+        <li>Continuous Testing, Continuous Integration & Continuous Delivery</li>
+        <li>Github</li>
+    </ul>
+    <h2><a href="./public/tools-used.html">Tools Used</a></h2>
     <h2>Skills</h2>
+    <table cellspacing="20">
+        <tr>
+            <td>
+                <table cellspacing="10">
+                    <tr>
+                        <td>HTML</td>
+                        <td>🌟🌟🌟🌟</td>
+                    </tr>
+                    <tr>
+                        <td>CSS</td>
+                        <td>🌟🌟🌟</td>
+                    </tr>
+                    <tr>
+                        <td>JavaScript</td>
+                        <td>🌟🌟</td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+                <table cellspacing="10">
+                    <tr>
+                        <td>Bootstrap</td>
+                        <td>🌟</td>
+                    </tr>
+                    <tr>
+                        <td>Springboot</td>
+                        <td>🌟</td>
+                    </tr>
+                    <tr>
+                        <td>Microfocus</td>
+                        <td>🌟</td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
     <h2>Awards</h2>
-    <h2>Certifications</h2>
+    <h2><a href="./public/certifications.html">Certifications</a></h2>
     <h2>Achievements</h2>
     <h2>Volunteering</h2>
-    <h2>Other</h2>
-    
-
+    <h2>Others</h2>
+    <hr>
+    <a href="./public/contact-me.html">Contact Me</a>
+    <br>
+    <a href="./public/hobbies.html">My Hobbies</a>
+    <hr>
     <footer>
         <small>
             © Shyam Jose R. All rights reserved.<br>Note: Personal Private web projects.
