To reflect Accenture Awards

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </td>
         </tr>
     </table>
-    <h2>Awards</h2>
+    <h2><a href="./public/awards.html">Awards</a></h2>
     <h2><a href="./public/certifications.html">Certifications</a></h2>
     <h2>Achievements</h2>
     <h2>Volunteering</h2>
