UI changes with minor responsiveness

--- a/index.html
+++ b/index.html
@@ -3,19 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>My Resume</title>
 </head>
 <body>
     <h1>Shyam Jose R</h1>
     <img src="./assets/images/Profile_Pic.jpg" alt="Profile Picture" height="200">
     <h2>Summary</h2>
-    <h2>Education</h2>
-    <ul>
-        <li>RMD Engineering College</li>
-        <li>Bethlahem Matric Higher Secondary School</li>
-        <li>Good Shepherd Matric Higher Secondary School</li>
-    </ul>
+
     <h2>Work Experience</h2>
     <ul>
         <li>Agile</li>
@@ -76,17 +71,32 @@
     </table>
     <h2><a href="./public/awards.html">Awards</a></h2>
     <h2><a href="./public/certifications.html">Certifications</a></h2>
-    <h2>Achievements</h2>
+   
     <h2>Volunteering</h2>
-    <h2>Others</h2>
+    <ul>
+        <li>Pan India Bio-Diversity Drive</li>
+    </ul>
+
+    <h2>Education</h2>
+    <ul>
+        <li>RMD Engineering College</li>
+        <li>Bethlahem Matric Higher Secondary School</li>
+        <li>Good Shepherd Matric Higher Secondary School</li>
+    </ul>
     <hr>
     <a href="./public/contact-me.html">Contact Me</a>
     <br>
     <a href="./public/hobbies.html">My Hobbies</a>
     <hr>
+        <h2>Education</h2>
+    <ul>
+        <li>RMD Engineering College</li>
+        <li>Bethlahem Matric Higher Secondary School</li>
+        <li>Good Shepherd Matric Higher Secondary School</li>
+    </ul>
     <footer>
         <small>
-            © Shyam Jose R. All rights reserved.<br>Note: Personal Private web projects.
+            © Shyam Jose R - personal portfolio. All rights reserved.
         </small>
     </footer>
 </body>
