--- a/index.html
+++ b/index.html
@@ -13,26 +13,35 @@
 
     <h2>Work Experience</h2>
     <ul>
-        <li>Agile</li>
-        <li>API</li>
-        <li>Business Requirements</li>
-        <li>Automated Test Scripts</li>
-        <li>CSS</li>
-        <li>Database</li>
-        <li>CI/CD</li>
-        <li>Shift Left Approach</li>
-        <li>Selenium </li>
-        <li>Cucumber BDD framework</li>
+        <li>Card Payment - Authorizations and Clearing</li>
+        <li>Agile Methodology</li>
+        <li>Selenium
+            <ul>
+                <li>Cucumber (BDD framework)</li>
+                <li>JStorm (BDD framework)</li>
+                <li>TestNG (TDD framework)</li>
+            </ul>
+        </li>
         <li>Core Java</li>
         <li>API Automation</li>
-        <li>Writing SQL for Automated testing</li>
         <li>IBM MQ Automation</li>
         <li>Kafka Automation</li>
-        <li>Continuous Testing, Continuous Integration & Continuous Delivery</li>
-        <li>Github</li>
+        <li>Git</li>
+        <li>Excel VB Scripting</li>
+        <li>Mainframe Automation using Excel VB</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Flexbox</li>
     </ul>
     <h2><a href="./public/tools-used.html">Tools Used</a></h2>
     <h2>Skills</h2>
+    <div class="skills-container">
+        <div class="individual-skill">
+            <div class="skill-name">HTML</div>
+            <div class="skill-metric">🌟🌟🌟🌟</div>
+        </div>
+    </div>
+
     <table cellspacing="20">
         <tr>
             <td>
@@ -88,12 +97,7 @@
     <br>
     <a href="./public/hobbies.html">My Hobbies</a>
     <hr>
-        <h2>Education</h2>
-    <ul>
-        <li>RMD Engineering College</li>
-        <li>Bethlahem Matric Higher Secondary School</li>
-        <li>Good Shepherd Matric Higher Secondary School</li>
-    </ul>
+
     <footer>
         <small>
             © Shyam Jose R - personal portfolio. All rights reserved.
